場の質問カードを表示完了